# enm

./: Cargo.toml  README.md
src/: alias.rs  app_config.rs  cd_file_changer.rs  cli.rs  config.rs  content_fetcher.rs  cpu_arch.rs  default_version.rs  enm_rnode_index.rs  entry_interface.rs  fetcher.rs  fs.rs  http.rs  ll_int.rs  llevel.rs  loaders.rs  long_term_usage.rs  lts.rs  machine_semver.rs  main.rs  mapper.rs  ni_remote.rs  p_folders.rs  progress.rs  prtl_folder.rs  reader_uv.rs  sift_method.rs  std_system_structure.rs  system_info.rs  system_version.rs  user_opted_version.rs  user_version.rs  user_version_in.rs  version.rs  version_files.rs  version_now.rs  version_std.rs  version_uv_reader.rs  vsetter.rs
src/actions/: alias.rs  app_van.rs  command.rs  default.rs  firstrun.rs  in_use.rs  ls_local.rs  ls_remote.rs  mod.rs  runx.rs  switch.rs  unalias.rs  uninstall.rs
src/commands/: command.rs  current.rs  default.rs  env.rs  exec.rs  install.rs  ls_local.rs  ls_remote.rs  mod.rs  uninstall.rs  use.rs  vsetter.rs
src/pressed/: mod.rs  tape.rs  zip.rs
src/shell/: bash.rs  mod.rs  powershell.rs  shell.rs  zsh.rs
src/shell/shell_detector/: mod.rs  unix.rs  windows.rs
src/shell/windows_cmd/: cd.cmd  mod.rs
src/terminators_entry/: bash.rs  mic_patch.rs  mod.rs  pshell.rs  terminators.rs  zsh.rs
src/terminators_entry/conjectr/: mod.rs  unix.rs  windows.rs
src/terminators_entry/winters/: cd.cmd  mod.rs
