[package]
name = "enm"
version = "1.0.0"
authors = ["Dhawal CL <dhawal@codelinter.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://enm.codelinter.com"
description = "Easy NodeJS Manager (enm)"

[dependencies]
tar = "0.3.33"
node-semver = "1.2.0"
serde = { version = "1.0.3", features = ["derive"] }
clap = { version = "4.0.1", features = ["derive", "env"] }
serde_json = "1.0.1"
chrono = { version = "0.3.3", features = ["serde", "now"], default-features = false }
xz2 = "0.1.7"
reqwest = { version = "0.2.4", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
url = "2.5.0"

[dev-dependencies]
duct = "0.2.1"
http = "1.0.0"
