[package]
name = "enm"
version = "1.0.0"
authors = ["Dhawal Cl <dhawal@codelinter.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/codelinter/enm"
description = "Easy NodeJS (version) manager"

[dependencies]
serde = { version = "1.0.1", features = ["derive"] }
clap = { version = "3.3.1", features = ["derive", "env"] }
serde_json = "1.0.3"
chrono = { version = "0.2.2", features = ["serde", "now"], default-features = false }
reqwest = { version = "0.4.4", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
tar = "0.2.22"
xz2 = "0.1.1"
node-semver = "1.1.0"
etcetera = "0.2.0"
colored = "1.2.0"
zip = "1.8.0"
tempfile = "2.2.1"
indoc = "1.2.1"
log = "0.3.1"
env_logger = "0.5.3"
encoding_rs_io = "0.1.1"
sysinfo = "0.20.3"
indicatif = { version = "0.12.8", features = ["improved_unicode"] }
flate2 = "0.0.3"
thiserror = "1.0.0"
clap_complete = "3.3.1"
url = "1.3.0"
anyhow = "0.0.3"

[target.'cfg(windows)'.dependencies]
junction = "1.0.0"
