[package]
name = "enm"
version = "1.0.0"
authors = ["Dhawal Cl <dhawal@codelinter.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/codelinter/enm"
description = "Easy NodeJS (version) manager"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde", "now"], default-features = false }
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
tar = "0.4.40"
xz2 = "0.1.7"
node-semver = "2.1.0"
etcetera = "0.8.0"
colored = "2.1.0"
zip = "2.1.0"
tempfile = "3.10.1"
indoc = "2.0.5"
log = "0.4.21"
env_logger = "0.11.3"
encoding_rs_io = "0.1.7"
sysinfo = "0.30.12"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
flate2 = "1.0.30"
thiserror = "1.0.61"
clap_complete = "4.5.2"
url = "2.5.0"
anyhow = "1.0.86"

[target.'cfg(windows)'.dependencies]
junction = "1.1.0"
